--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "Stylesheet" href="index.css">
-   
+    <link rel="icon" type="image/x-icon" class="fa-solid fa-utensils">>
     <script src="https://kit.fontawesome.com/c838794bcf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -17,7 +17,7 @@
         <h3><a href="index.html">Home</h3></a>
         <h3><a href="services.html">Our Services</h3></a>
         <h3><a href="contacts.html">contacts</h3></a>
-        <h3><a href="/intranet/ams.html">Ams</h3></a>
+        <h3><a href="intranet/ams.html">Ams</h3></a>
 
    
     </nav>
@@ -114,11 +114,12 @@
         <h3>
             TOTAL: KSH <span id="total">0</span>
         </h3>
-    <button id = checkout>
+    <button id = 'checkout'>
         <i class="fa-solid fa-cart-shopping" style="font-size:50px;"></i>
     </button>
-      
-    
+      <span id="ordered">
+
+      </span>
 
 
     </div>
