--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "Stylesheet" href="index.css">
-    <link rel="icon" type="image/x-icon" class="fa-solid fa-utensils">>
+    <link rel="icon" type="image/x-icon" class="fa-solid fa-utensils">
     <script src="https://kit.fontawesome.com/c838794bcf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
